# SensibLaw

./: $tmpdb  .env.example  .gitignore  .pre-commit-config.yaml  .tmp_check.sqlite  .tmp_phi_au.sqlite  .tmp_phi_gwb.sqlite  AGENTS.md  CHANGELOG.md  COMPACTIFIED_CONTEXT.md  CONTRIBUTING.md  DATABASE.md  DB_ROADMAP.md  Jadepage.raw.copypaste  Makefile  ONBOARDING.md  PAPER.md  README.md  ROADMAP.md  SPRINT.md  TIMELINE_STREAM_VIZ_ROADMAP.md  fastapi.py  generic_text_demo.sqlite  package-lock.json  package.json  parsed2.json  playwright.config.ts  pydantic.py  pyproject.toml  requirements.txt  start_app.bat  start_app.sh  streamlit_app.py  test_output.txt  test_zelph.zlp  todo.md
.tmp_phi_inspect/: phi_au.sqlite
.tmp_phi_inspect2/: phi_au.sqlite
.tmp_phi_inspect3/: phi_au.sqlite
artifacts_generic/: Branch · Engine Sound Simulation Methods.logic_tree.json  SensibLaw Ontology & Database Design Specification.logic_tree.json  Shrikhande graph plot.logic_tree.json  logic_tree_branch_engine_sound_20260202-180810.dot
cli/: __init__.py  __main__.py  brief.py  code_observer.py  cohort_b_operator_control_summary.py  cohort_b_operator_index.py  cohort_e_diagnostics.py  frame.py  glossary.py  grounding_depth.py  receipts.py
concepts/: seeds.json
data/: corrections.csv  courtlistener_statute_cases.json  cultural_flags.yaml  cultural_rules.yaml  foundation_sources.json  frl_manifest.json  glossary.yaml  harm_index.yaml  hca_manifest.json
docs/: ADR_LAYER3_SPAN_CONTRACT.md  ARCHITECTURE_LAYERS.md  FINANCE_SCHEMA.md  ITIR.md  ONTOLOGY_EXTERNAL_REFS.md  actor_coalescing_contract.md  api.md  automation_intelligence.md  ci_acceptance.md  cli_examples.md  corpus_characterisation.md  corpus_setup.md  cross_document_topology.md  dbpedia_integration.md  dbpedia_queries.md  decision_observation_projection_contract.md  end_to_end.md  external_graph_bridge.md  external_ingestion.md  external_ontologies.md  extractor_ontology_mapping_contract_20260213.md  fact_envelope.md  fact_intake_contract.md  fuzzing.md  goldset_harness.md  graph.md  how_to_review.md  human_tools_integration.md  implementation_style_guide.md  ingest_modes.md  ingestion.md  interfaces.md  ir_invariants.md  itir_model.md  itir_vs_sl.md  judicial_decision_behavior_contract.md  les_overlay_adapter.md  lexeme_layer.md  lexeme_normalizer_character_class_layer.md  logic_graph_layers.md  (+59 more)
examples/: README.md  composed_candidate_node_minimal.json  cross_system_phi_minimal.json  fact_intake_bundle_minimal.json  fact_review_bundle_minimal.json  logic_tree_example.dot  review_bundle_minimal.json  review_collection_minimal.json
fastapi/: __init__.py
migrations/: 20240920_layer4_layer5.sql  20240927_remedy_legal_system_cleanup.sql  20241005_event_wrong_type_legal_system.sql  20241011_remedy_code_unique.sql  20241015_event_address.sql  20241105_add_actor_id_to_event_participant.sql  20241105_event_remedy_modality_cleanup.sql
patterns/: legal_patterns.jsonl
playwright-report/: index.html
policies/: consent.rego  wiki_timeline_aoo_profile_v1.json
pydantic/: __init__.py
pydantic_stub/: __init__.py
schemas/: event.schema.yaml  fact.intake.bundle.v1.schema.yaml  fact.review.bundle.v1.schema.yaml  obligation.alignment.v1.schema.yaml  obligation.explanation.v1.schema.yaml  obligation.query.v1.schema.yaml  review.bundle.v1.schema.yaml  review.collection.v1.schema.yaml  sl.composed_candidate_node.v1.schema.yaml  sl.cross_system_phi.contract.v1.schema.yaml  sl.cross_system_phi_meta.v1.schema.yaml  sl.latent_promoted_graph.v1.schema.yaml  sl.observation_claim.contract.v1.schema.yaml  sl.observation_claim.wikidata_projection.v1.schema.yaml  sl.source_unit.v1.schema.yaml  sl.wikidata.climate_text_source.v1.schema.yaml  sl.wikidata_change_review_packet.v0_1.schema.yaml  sl.wikidata_change_review_report.v0_1.schema.yaml  sl.wikidata_migration_pack.v1.schema.yaml  sl.wikidata_phi_text_bridge_case.v1.schema.yaml  sl.wikidata_review_packet.v0_1.schema.yaml  sl.wikidata_split_plan.v0_1.schema.yaml  timeline.ribbon.v1.schema.json
scripts/: acquire_legal_source.py  (+146 more)
(+2043 files in other folders)
