[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sensiblaw"
version = "0.1.0"
description = "Legal research and reasoning toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "SensibLaw contributors"}]
dependencies = [
    "pdfminer.six",
    "requests",
    "fastapi",
    "matplotlib",
    "graphviz",
    "networkx",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit",
]
test = [
    "pytest",
    "hypothesis",
]

[project.scripts]
sensiblaw = "cli:main"

[tool.setuptools]
package-dir = {"" = "src", "cli" = "cli"}

[tool.setuptools.packages.find]
where = ["src", "cli"]

[tool.setuptools.package-data]
"src" = ["data/foundation_sources.json"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = [
    "src/distinguish",
    "tests/distinguish",
    "tests/test_distinguish_cli.py",
]

[tool.coverage.report]
fail_under = 80
