[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sensiblaw"
version = "0.1.0"
description = "Legal research and reasoning toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "SensibLaw contributors"}]
dependencies = [
    "pdfminer.six",
    "requests",
    "fastapi",
    "matplotlib",
    "jsonschema",
    "pyyaml",
    "graphviz",
    "networkx",
    "streamlit>=1.30",
    "pandas>=1.5",
    "spacy>=3.6,<4",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "hypothesis",
]
test = [
    "pytest",
    "hypothesis",
    "networkx",
]
graph = [
    "torch>=2.1,<3",
    "dgl>=1.1,<2",
]

[project.scripts]
sensiblaw = "cli:main"

[tool.setuptools]
package-dir = {"" = "src", "cli" = "cli"}

[tool.setuptools.packages.find]
where = ["src", "cli"]

[tool.setuptools.package-data]
"src" = ["data/foundation_sources.json"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = [
    "src/distinguish",
    "tests/distinguish",
    "tests/test_distinguish_cli.py",
]

[tool.coverage.report]
fail_under = 80
